# BldMystery

./: .gitignore  BBLibc.h  BOD.sln  BODGroup.bpg  Blade.dcproject  Blade.dsw  BladeNative.sln  Mss32.hdp  Mss32dummy.sln  NetBlade.dcproject  README.md  _PT-Blade.hdp  _PT-Blade2.hdp  _PT-Bladex.hdp  _PT-WinMain-failed-stack.txt  _PT-bladex.rec  _PT-d3d-stack.txt  _PT_Mss32_info.txt  _PT_Unit1.c  _PT_ext_funcs.c  _PT_test_blade_Project.bpr  application.h  appveyor.yml  blade.xml  bld_ext_funcs.h  bw_desc_by_sgi1981.txt  console.xml  entity.h  game_clock.h  game_state.h  net.xml  net_data.h  nosafeseh.props  process_asm.py  python.xml  python_extra.xml  raster.xml  shw32_info.txt
Blade/: AnimationExt.cpp  App.cpp  App.h  BBLibc.h  BMAP.CPP  BMap.h  BWorld.cpp  BWorld.h  Blade.bpr  Blade.dsp  Blade.rc  Clock.h  (+69 more)
src/: BOD.sln  BODGroup.bpg  CMakeLists.txt  CMakeSettings.json
src/AnalyticGeometry/: BoundingBox.h  CMakeLists.txt  Location.cpp  Location.h  Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Vector.cpp  Vector.h  ViewPose.cpp  ViewPose.h
src/App/: App.cpp  App.h  camera.cpp  camera.h  stats.cpp
src/App/Windows/: WinApp.cpp  WinApp.h
src/BBLibc/: BBLibc.cpp  BBLibc.h  BBLibc.vcproj  BitMap.cpp  BitMap.h  BitMap24.cpp  BitMap24.h  CMakeLists.txt  ChannelOFile.cpp  ChannelOFile.h  Color.cpp  Color.h  FileInfo.h  IDataFile.cpp  IDataFile.h  List.cpp  List.h  MeshEdge.cpp  MeshEdge.h  MessageChannel.cpp  MessageChannel.h  MessageManager.cpp  MessageManager.h  NDataBase.cpp  NDataBase.h  Name.cpp  Name.h  NamedObj.cpp  NamedObj.h  ODataFile.cpp  ODataFile.h  ObjDscr.cpp  ObjDscr.h  Pal.cpp  Pal.h  ParticleGType.cpp  ParticleGType.h  RDataLight.cpp  RDataLight.h  RDataTriangle.cpp  (+5 more)
src/BBLibc/asm/: data.txt  export.inc  export_cmd.txt  import.inc  module.txt  native.asm  procedures.inc  reloc.txt  stdcallDefs.cpp  uninitialised.asm  variables.inc
src/BWorld/: BMAP.CPP  BMap.h  BWorld.cpp  BWorld.h  MapTexture.cpp  MaterialExt.cpp  OctTree.cpp  OctTree.h  SectorFuncs.cpp  SectorFuncs.h  Surface.cpp  WorldToMBW.cpp  atmosphere.cpp  atmosphere.h
src/Blade/: App.cpp  App.h  AuraEntity.h  BMap.h  BWorld.cpp  BWorld.h  BipedEntity.cpp  BipedEntity.h  Blade.rc  Blade.vcproj  Blade.vcxproj  Blade.vcxproj.filters  BladeApp.h  BoundingBox.h  CDPlayer.h  CMakeLists.txt  CameraEntity.h  Climbing.cpp  Clock.h  EntityFuncs.cpp  Events.cpp  Events.h  Location.cpp  Location.h  Matrix.cpp  Matrix.h  ObjExt.cpp  ObjectEntity.h  Person.cpp  Person.h  PersonEntity.h  PhysicSIEntity.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  StringValue.h  Surface.cpp  Surface.h  Vector.cpp  (+16 more)
src/Blade/AnalyticGeometry/: Matrix.cpp  Plane.h  Polygon.cpp
src/Blade/App/: App.cpp  App.h  camera.cpp  camera.h  stats.cpp
src/Blade/App/Windows/: WinApp.cpp  WinApp.h
src/Blade/BWorld/: BMAP.CPP  BMap.h  BWorld.cpp  BWorld.h  MapTexture.cpp  MapTexture.h  SectorFuncs.cpp  Surface.cpp  Surface.h
src/Blade/Control/: Climbing.cpp  Climbing.h  EventFuncC.h  Events.h
src/Blade/Entities/: AuraEntity.h  BipedEntity.cpp  BipedEntity.h  DecalEntity.cpp  Entity.h  EntityFuncs.cpp  EntityFuncs.h  ObjectEntity.h  PersonEntity.h  PhysicSIEntity.h  SparkEntity.cpp
src/Blade/Math/: BLights.cpp  BLights.h  BSpline.cpp  BSpline.h
src/Blade/NetMod/: libnet.h  net_ext.cpp
src/Blade/Person/: Person.h  simpleact.cpp
src/Blade/Sound/: SoundFuncs.cpp
src/Blade/asm/: data.txt  export.inc  export_cmd.txt  import.inc  module.txt  procedures.inc  stdcallDefs.cpp  uninitialised.asm  variables.inc
src/Blade/enemies/: Combos_Stuff.cpp  Combos_Stuff.h  chartype.cpp  en_control.cpp  en_control.h
src/BladeExt/: Bladex.c  Bladex.cpp  Bladex.vcproj  Bladex.vcxproj  Bladex.vcxproj.filters  CMakeLists.txt  Character.c  Entity.cpp  HeapCheck.c  Inventory.cpp  Material.cpp  Sector.cpp  Sound.cpp  Trail.cpp  bladex_int.h
src/Bladex/: Bladex.vcproj  bladex_int.h
src/Control/: AnimationExt.cpp  Climbing.cpp  Climbing.h  EventFuncC.h  Events.cpp  Events.h  anim.h
src/Entities/: BipedEntity.cpp  BipedEntity.h  CameraEntity.cpp  CameraEntity.h  DecalEntity.cpp  DecalEntity.h  Entity.h  EntityFuncs.cpp  EntityFuncs.h  PersonEntity.cpp  PersonEntity.h  PhysicSIEntity.cpp  PhysicSIEntity.h  SolidMask.h  SparkEntity.h  physicsientity.h
src/Math/: BLights.cpp  BLights.h  BSpline.cpp
src/NetBlade/: CMakeLists.txt  NetBlade.bpr  NetBlade.def  bcb_wrappers.cpp  interface.cpp  netblade_int.h  netdialog.cpp  netfunctions.cpp  netinterface.cpp
src/NetBlade/dplayx/: CMakeLists.txt
src/NetMod/: datanet.cpp  gamenet.cpp  libnet.cpp  net_ext.cpp
src/Person/: Person.cpp  Person.h  simpleact.cpp  simpleact.h
src/Python-1.5.2/: CMakeLists.txt  python15.vcproj
src/Python-1.5.2/Include/: config.h  modsupport.h  pythonrun.h
src/Python-1.5.2/Modules/: cStringIO.c  regexpr.c  regexpr.h  signalmodule.c  timemodule.c
src/Python-1.5.2/PC/: python_nt.rc
src/Python-1.5.2/Python/: getopt.c  pythonrun.c
src/Raster/: CMakeLists.txt  Raster.vcproj  Raster.vcxproj  Raster.vcxproj.filters  RasterDevice.h  py_raster.cpp  raster_device.cpp  raster_int.h
src/Raster/rOpenGL3/: CMakeLists.txt  ConfigSections.cpp  ConfigSections.h  GL2D.cpp  GL2D.cpp.cpp  GLLights.cpp  GLTexManager.cpp  GLVideoMode.cpp  GLVideoMode.h  GlExtensions.h  ROpenGLDeviceDLL.cpp  ROpenGLDeviceDLL.h  RTrisDeviceDLL.cpp  RTrisDeviceDLL.h  asmMain.asm  dummy_symbols.cpp
src/Raster/rOpenGL3/Resources/: rOpenGL.rc
src/Raster/rOpenGL3/asm/: data.txt  export.inc  export_cmd.txt  import.inc  module.txt  native.asm  procedures.inc  reloc.txt  variables.inc
src/Sound/: Sound.h  SoundFuncs.cpp  SoundFuncs.h
src/View/: CameraView.cpp  CameraView.h
src/bicrt/: CMakeLists.txt
src/enemies/: Combos_Stuff.cpp  chartype.cpp  chartype.h  en_control.cpp
src/include/: AnimationExt.h  BInputc.h  BUIxc.h  EntityFuncs.h  Hash.h  SoundFuncs.h  array.h  bblibc.h  blade_ext.h  bld_assert.h  bld_python.h  bld_server_info.h  bld_system.h  export.h  raster_device.h
src/netgame/: CMakeLists.txt  netgame.cpp  netgame.vcproj  netgame.vcxproj  netgame.vcxproj.filters
(+297 files in other folders)
